--- a/client/src/Component/Important/Footer/Foot.css
+++ b/client/src/Component/Important/Footer/Foot.css
@@ -35,6 +35,12 @@ footer{
     border-top: 2px solid white;
 }
 
+.icn{
+    margin-right: 10px;
+    font-size: 15px;
+    vertical-align: top;
+}
+
 @media (max-width:800px) {
 
     footer .main .sub-dom {
