--- a/client/src/Component/Contact-us/Contact.css
+++ b/client/src/Component/Contact-us/Contact.css
@@ -80,3 +80,9 @@
     text-transform: uppercase;
     font-size: 16px;
 }
+
+@media (max-width: 425px) {
+    .contact-form {
+        padding: 20px;
+    }
+}
