--- a/client/src/Component/Homepage/Home.css
+++ b/client/src/Component/Homepage/Home.css
@@ -284,10 +284,8 @@
         position: absolute;
         left: 0;
         opacity: 2;
-        height: 216px;
-        width: 100%;
         width: 90%;
-        height: 218px;
+        height: 230px;
         margin: 20px;
     }
 
@@ -302,7 +300,7 @@
     }
 
     .b-blog {
-        height: 220px;
+        height: 170px;
         margin: 20px;
         width: 90%;
     }
@@ -313,10 +311,13 @@
 
     .b-blog-title {
         font-size: 15px;
+        padding: 8px 0;
     }
 
     .b-blog-date {
         font-size: 10px;
+        font-weight: 500;
+        padding-top: 20px
     }
     .b-blog-text {
         letter-spacing: 1px;
