--- a/client/src/Component/Admin/PatientDB/PatientDB.css
+++ b/client/src/Component/Admin/PatientDB/PatientDB.css
@@ -415,6 +415,38 @@
 
 .modal-content label {
     position: relative;
+    width: 100%;
+    font-weight: 600;
+}
+
+.modal-content input {
+    width: 100%;
+    padding: 10px;
+}
+
+.modal-content select {
+    width: 100%;
+    padding: 10px;
+}
+
+.modal-content form {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 20px;
+}
+
+.modal-content textarea {
+    width: 100%;
+    height: 100px;
+}
+
+.modal-content button{
+    padding: 10px;
+    color: white;
+    width: 100%;
+    background-color: #276AB3;
+    border: none;
+    border-radius: 5px;
 }
 
 .invoice-main {
